--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -1,3 +1,11 @@
 {
-  "itemGroup.warborn_tab": "Warborn Items"
+  "itemGroup.warborn_tab": "Warborn Items",
+  "item.warborn.rus_helmet": "Rus Helmet",
+  "item.warborn.rus_chestplate": "Rus Chestplate",
+  "item.warborn.rusbron_helmet": "RusBron Helm",
+  "item.warborn.rusbron_chestplate": "RusBron Chestplate",
+  "item.warborn.rusbron_rof_liko_helmet": "RusBron Rof Liko Helm",
+  "item.warborn.rusbron_rof_liko_chestplate": "RusBron Rof Liko Chestplate",
+  "item.warborn.rusbron_pulemetchik_helmet": "RusBron Pulemetchik Helm",
+  "item.warborn.rusbron_pulemetchik_chestplate": "RusBron Pulemetchik Chestplate"
 }
