Finished Adding All The Armors.
- Need to add icons to the items/armors

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -6,6 +6,25 @@
   "item.warborn.rusbron_chestplate": "RusBron Chestplate",
   "item.warborn.rusbron_rof_liko_helmet": "RusBron Rof Liko Helm",
   "item.warborn.rusbron_rof_liko_chestplate": "RusBron Rof Liko Chestplate",
+  "item.warborn.rusbron_for_liko_helmet": "RusBron For Liko Helm",
+  "item.warborn.rusbron_for_liko_chestplate": "RusBron For Liko Chestplate",
   "item.warborn.rusbron_pulemetchik_helmet": "RusBron Pulemetchik Helm",
-  "item.warborn.rusbron_pulemetchik_chestplate": "RusBron Pulemetchik Chestplate"
+  "item.warborn.rusbron_pulemetchik_chestplate": "RusBron Pulemetchik Chestplate",
+  "item.warborn.rusbron_pulemetchik_disguise_helmet": "RusBron Pulemetchik Disguise Helm",
+  "item.warborn.rusbron_pulemetchik_disguise_chestplate": "RusBron Pulemetchik Disguise Chestplate",
+  "item.warborn.rusbron_pulemetchik_net_naplekhnikov_chestplate": "RusBron Pulemetchik Net Naplekhnikov Chestplate",
+  "item.warborn.rusbron_shturmovik_chestplate": "RusBron Shturmovik Chestplate",
+  "item.warborn.rusbron_shturmovik_disguise_helmet": "RusBron Shturmovik Disguise Helmet",
+  "item.warborn.rusbron_shturmovik_disguise_chestplate": "RusBron Shturmovik Disguise Chestplate",
+  "item.warborn.rusbron_shturmovik_net_naplekhnikov_chestplate": "RusBron Shturmovik Net Naplekhnikov Chestplate",
+  "item.warborn.ukrbron_pulemetchik_helmet": "UkrBron Pulemetchik Helm",
+  "item.warborn.ukrbron_pulemetchik_chestplate": "UkrBron Pulemetchik Chestplate",
+  "item.warborn.ukrbron_pulemetchik_leggings": "UkrBron Pulemetchik Leggings",
+  "item.warborn.ukrbron_pulemetchik_disguise_helmet": "UkrBron Pulemetchik Disguise Helm",
+  "item.warborn.ukrbron_pulemetchik_disguise_chestplate": "UkrBron Pulemetchik Disguise Chestplate",
+  "item.warborn.ukrbron_pulemetchik_disguise_leggings": "UkrBron Pulemetchik Disguise Leggings",
+  "item.warborn.ukrbron_pulemetchik_net_naplekhnikov_chestplate": "UkrBron Pulemetchik Net Naplekhnikov Chestplate",
+  "item.warborn.ukrbron_helmet": "UkrBron Helmet",
+  "item.warborn.ukrbron_chestplate": "UkrBron Chestplate",
+  "item.warborn.ukrbron_leggings": "UkrBron Leggings"
 }
