-Added icons to all the armors -Edited the language file to change it to Warborn instead of Warborn Items

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.warborn_tab": "Warborn Items",
+  "itemGroup.warborn_tab": "Warborn",
   "item.warborn.rus_helmet": "Rus Helmet",
   "item.warborn.rus_chestplate": "Rus Chestplate",
   "item.warborn.rusbron_helmet": "RusBron Helm",
