- Finished adding all the armors - Added/fixed EN_US.json file

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -1,30 +1,33 @@
 {
   "itemGroup.warborn_tab": "Warborn",
-  "item.warborn.rus_helmet": "Rus Helmet",
-  "item.warborn.rus_chestplate": "Rus Chestplate",
-  "item.warborn.rusbron_helmet": "RusBron Helm",
-  "item.warborn.rusbron_chestplate": "RusBron Chestplate",
-  "item.warborn.rusbron_rof_liko_helmet": "RusBron Rof Liko Helm",
-  "item.warborn.rusbron_rof_liko_chestplate": "RusBron Rof Liko Chestplate",
-  "item.warborn.rusbron_for_liko_helmet": "RusBron For Liko Helm",
-  "item.warborn.rusbron_for_liko_chestplate": "RusBron For Liko Chestplate",
-  "item.warborn.rusbron_pulemetchik_helmet": "RusBron Pulemetchik Helm",
-  "item.warborn.rusbron_pulemetchik_chestplate": "RusBron Pulemetchik Chestplate",
-  "item.warborn.rusbron_pulemetchik_disguise_helmet": "RusBron Pulemetchik Disguise Helm",
-  "item.warborn.rusbron_pulemetchik_disguise_chestplate": "RusBron Pulemetchik Disguise Chestplate",
-  "item.warborn.rusbron_pulemetchik_net_naplekhnikov_chestplate": "RusBron Pulemetchik Net Naplekhnikov Chestplate",
-  "item.warborn.rusbron_shturmovik_chestplate": "RusBron Shturmovik Chestplate",
-  "item.warborn.rusbron_shturmovik_disguise_helmet": "RusBron Shturmovik Disguise Helmet",
-  "item.warborn.rusbron_shturmovik_disguise_chestplate": "RusBron Shturmovik Disguise Chestplate",
-  "item.warborn.rusbron_shturmovik_net_naplekhnikov_chestplate": "RusBron Shturmovik Net Naplekhnikov Chestplate",
-  "item.warborn.ukrbron_pulemetchik_helmet": "UkrBron Pulemetchik Helm",
-  "item.warborn.ukrbron_pulemetchik_chestplate": "UkrBron Pulemetchik Chestplate",
-  "item.warborn.ukrbron_pulemetchik_leggings": "UkrBron Pulemetchik Leggings",
-  "item.warborn.ukrbron_pulemetchik_disguise_helmet": "UkrBron Pulemetchik Disguise Helm",
-  "item.warborn.ukrbron_pulemetchik_disguise_chestplate": "UkrBron Pulemetchik Disguise Chestplate",
-  "item.warborn.ukrbron_pulemetchik_disguise_leggings": "UkrBron Pulemetchik Disguise Leggings",
-  "item.warborn.ukrbron_pulemetchik_net_naplekhnikov_chestplate": "UkrBron Pulemetchik Net Naplekhnikov Chestplate",
-  "item.warborn.ukrbron_helmet": "UkrBron Helmet",
-  "item.warborn.ukrbron_chestplate": "UkrBron Chestplate",
-  "item.warborn.ukrbron_leggings": "UkrBron Leggings"
+  "item.warborn.shturmovik_ru_helmet": "Shturmovik RU Helmet",
+  "item.warborn.shturmovik_ru_chestplate": "Shturmovik RU Chestplate",
+  "item.warborn.shturmovikv2_helmet": "Shturmovik V2 Helmet",
+  "item.warborn.shturmovikv2_chestplate": "Shturmovik V2 Chestplate",
+  "item.warborn.razvetchik_helmet": "Razvetchik Helmet",
+  "item.warborn.razvetchik_chestplate": "Razvetchik Chestplate",
+  "item.warborn.mashinegunner_ru_helmet": "Machine Gunner RU Helmet",
+  "item.warborn.mashinegunner_ru_chestplate": "Machine Gunner RU Chestplate",
+  "item.warborn.mashinegunner_ru_shoulderpads": "Machine Gunner RU Shoulderpads",
+  "item.warborn.squad_lider_ru_helmet": "Squad Leader RU Helmet",
+  "item.warborn.squad_lider_ru_chestplate": "Squad Leader RU Chestplate",
+  "item.warborn.squad_lider_ru_backpack": "Squad Leader RU Backpack",
+  "item.warborn.shturmovik_ru_backpack": "Shturmovik RU Backpack",
+  "item.warborn.nato_pidr_sqad_leader_helmet": "NATO Squad Leader Helmet",
+  "item.warborn.nato_pidr_sqad_leader_chestplate": "NATO Squad Leader Chestplate",
+  "item.warborn.nato_pidr_sqad_leader_backpack": "NATO Squad Leader Backpack",
+  "item.warborn.nato_pidr_sqad_leader_shoulderpads": "NATO Squad Leader Shoulderpads",
+  "item.warborn.nato_pidr_ukr_helmet": "NATO Ukrainian Helmet",
+  "item.warborn.nato_pidr_ukr_chestplate": "NATO Ukrainian Chestplate",
+  "item.warborn.nato_pidr_ukr_backpack": "NATO Ukrainian Backpack",
+  "item.warborn.nato_pidr_shturmovik2_helmet": "NATO Shturmovik V2 Helmet",
+  "item.warborn.nato_pidr_shturmovik2_chestplate": "NATO Shturmovik V2 Chestplate",
+  "item.warborn.nato_pidr_shturmovik2_shoulderpads": "NATO Shturmovik V2 Shoulderpads",
+  "item.warborn.nato_pidr_shturmovik_helmet": "NATO Shturmovik Helmet",
+  "item.warborn.nato_pidr_shturmovik_chestplate": "NATO Shturmovik Chestplate",
+  "item.warborn.nato_pidr_shturmovik_shoulderpads": "NATO Shturmovik Shoulderpads",
+  "item.warborn.nato_pidr_mg_helmet": "NATO Machine Gunner Helmet",
+  "item.warborn.nato_pidr_mg_chestplate": "NATO Machine Gunner Chestplate",
+  "item.warborn.nato_pidr_mg_shoulderpads": "NATO Machine Gunner Shoulderpads",
+  "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack"
 }
