- Basic backpack opening, screen, correct item positions, and lang file

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -29,5 +29,6 @@
   "item.warborn.nato_pidr_mg_helmet": "NATO Machine Gunner Helmet",
   "item.warborn.nato_pidr_mg_chestplate": "NATO Machine Gunner Chestplate",
   "item.warborn.nato_pidr_mg_shoulderpads": "NATO Machine Gunner Shoulderpads",
-  "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack"
+  "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack",
+  "menu.warborn.backpack": "Backpack"
 }
