- Got rid of duplicate helmets

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -1,15 +1,11 @@
 {
   "itemGroup.warborn_tab": "Warborn",
-  "item.warborn.shturmovik_ru_helmet": "Shturmovik RU Helmet",
+  "item.warborn.ru_helmet": "RU Helmet",
   "item.warborn.shturmovik_ru_chestplate": "Shturmovik RU Chestplate",
-  "item.warborn.shturmovikv2_helmet": "Shturmovik V2 Helmet",
   "item.warborn.shturmovikv2_chestplate": "Shturmovik V2 Chestplate",
-  "item.warborn.razvetchik_helmet": "Razvetchik Helmet",
   "item.warborn.razvetchik_chestplate": "Razvetchik Chestplate",
-  "item.warborn.mashinegunner_ru_helmet": "Machine Gunner RU Helmet",
   "item.warborn.mashinegunner_ru_chestplate": "Machine Gunner RU Chestplate",
   "item.warborn.mashinegunner_ru_shoulderpads": "Machine Gunner RU Shoulderpads",
-  "item.warborn.squad_lider_ru_helmet": "Squad Leader RU Helmet",
   "item.warborn.squad_lider_ru_chestplate": "Squad Leader RU Chestplate",
   "item.warborn.squad_lider_ru_backpack": "Squad Leader RU Backpack",
   "item.warborn.shturmovik_ru_backpack": "Shturmovik RU Backpack",
@@ -20,13 +16,11 @@
   "item.warborn.nato_pidr_ukr_helmet": "NATO Ukrainian Helmet",
   "item.warborn.nato_pidr_ukr_chestplate": "NATO Ukrainian Chestplate",
   "item.warborn.nato_pidr_ukr_backpack": "NATO Ukrainian Backpack",
-  "item.warborn.nato_pidr_shturmovik2_helmet": "NATO Shturmovik V2 Helmet",
   "item.warborn.nato_pidr_shturmovik2_chestplate": "NATO Shturmovik V2 Chestplate",
   "item.warborn.nato_pidr_shturmovik2_shoulderpads": "NATO Shturmovik V2 Shoulderpads",
-  "item.warborn.nato_pidr_shturmovik_helmet": "NATO Shturmovik Helmet",
+  "item.warborn.nato_pidr_helmet": "NATO Helmet",
   "item.warborn.nato_pidr_shturmovik_chestplate": "NATO Shturmovik Chestplate",
   "item.warborn.nato_pidr_shturmovik_shoulderpads": "NATO Shturmovik Shoulderpads",
-  "item.warborn.nato_pidr_mg_helmet": "NATO Machine Gunner Helmet",
   "item.warborn.nato_pidr_mg_chestplate": "NATO Machine Gunner Chestplate",
   "item.warborn.nato_pidr_mg_shoulderpads": "NATO Machine Gunner Shoulderpads",
   "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack",
