- Added shoulderpad support for "body" slot - Unified rest of NATO helmets - Unified shoulderpads - Reorganized items in Warborn Tab

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -5,24 +5,21 @@
   "item.warborn.shturmovikv2_chestplate": "Shturmovik V2 Chestplate",
   "item.warborn.razvetchik_chestplate": "Razvetchik Chestplate",
   "item.warborn.mashinegunner_ru_chestplate": "Machine Gunner RU Chestplate",
-  "item.warborn.mashinegunner_ru_shoulderpads": "Machine Gunner RU Shoulderpads",
+  "item.warborn.ru_shoulderpads": "RU Shoulderpads",
   "item.warborn.squad_lider_ru_chestplate": "Squad Leader RU Chestplate",
   "item.warborn.squad_lider_ru_backpack": "Squad Leader RU Backpack",
   "item.warborn.shturmovik_ru_backpack": "Shturmovik RU Backpack",
   "item.warborn.nato_pidr_sqad_leader_helmet": "NATO Squad Leader Helmet",
   "item.warborn.nato_pidr_sqad_leader_chestplate": "NATO Squad Leader Chestplate",
   "item.warborn.nato_pidr_sqad_leader_backpack": "NATO Squad Leader Backpack",
-  "item.warborn.nato_pidr_sqad_leader_shoulderpads": "NATO Squad Leader Shoulderpads",
+  "item.warborn.nato_pidr_shoulderpads": "NATO Shoulderpads",
   "item.warborn.nato_pidr_ukr_helmet": "NATO Ukrainian Helmet",
   "item.warborn.nato_pidr_ukr_chestplate": "NATO Ukrainian Chestplate",
   "item.warborn.nato_pidr_ukr_backpack": "NATO Ukrainian Backpack",
   "item.warborn.nato_pidr_shturmovik2_chestplate": "NATO Shturmovik V2 Chestplate",
-  "item.warborn.nato_pidr_shturmovik2_shoulderpads": "NATO Shturmovik V2 Shoulderpads",
   "item.warborn.nato_pidr_helmet": "NATO Helmet",
   "item.warborn.nato_pidr_shturmovik_chestplate": "NATO Shturmovik Chestplate",
-  "item.warborn.nato_pidr_shturmovik_shoulderpads": "NATO Shturmovik Shoulderpads",
   "item.warborn.nato_pidr_mg_chestplate": "NATO Machine Gunner Chestplate",
-  "item.warborn.nato_pidr_mg_shoulderpads": "NATO Machine Gunner Shoulderpads",
   "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack",
   "menu.warborn.backpack": "Backpack",
   "key.warborn.open_backpack": "Open Backpack",
