--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -9,23 +9,28 @@
   "item.warborn.squad_lider_ru_chestplate": "Squad Leader RU Chestplate",
   "item.warborn.squad_lider_ru_backpack": "Squad Leader RU Backpack",
   "item.warborn.shturmovik_ru_backpack": "Shturmovik RU Backpack",
-  "item.warborn.nato_pidr_sqad_leader_helmet": "NATO Squad Leader Helmet",
-  "item.warborn.nato_pidr_sqad_leader_chestplate": "NATO Squad Leader Chestplate",
-  "item.warborn.nato_pidr_sqad_leader_backpack": "NATO Squad Leader Backpack",
-  "item.warborn.nato_pidr_shoulderpads": "NATO Shoulderpads",
-  "item.warborn.nato_pidr_ukr_helmet": "NATO Ukrainian Helmet",
-  "item.warborn.nato_pidr_ukr_chestplate": "NATO Ukrainian Chestplate",
-  "item.warborn.nato_pidr_ukr_backpack": "NATO Ukrainian Backpack",
-  "item.warborn.nato_pidr_shturmovik2_chestplate": "NATO Shturmovik V2 Chestplate",
-  "item.warborn.nato_pidr_helmet": "NATO Helmet",
-  "item.warborn.nato_pidr_shturmovik_chestplate": "NATO Shturmovik Chestplate",
-  "item.warborn.nato_pidr_mg_chestplate": "NATO Machine Gunner Chestplate",
-  "item.warborn.nato_pidr_mg_backpack": "NATO Machine Gunner Backpack",
+  "item.warborn.nato_sqad_leader_helmet": "NATO Squad Leader Helmet",
+  "item.warborn.nato_sqad_leader_chestplate": "NATO Squad Leader Chestplate",
+  "item.warborn.nato_sqad_leader_backpack": "NATO Squad Leader Backpack",
+  "item.warborn.nato_shoulderpads": "NATO Shoulderpads",
+  "item.warborn.nato_ukr_helmet": "NATO Ukrainian Helmet",
+  "item.warborn.nato_ukr_chestplate": "NATO Ukrainian Chestplate",
+  "item.warborn.nato_ukr_backpack": "NATO Ukrainian Backpack",
+  "item.warborn.nato_shturmovik2_chestplate": "NATO Shturmovik V2 Chestplate",
+  "item.warborn.nato_helmet": "NATO Helmet",
+  "item.warborn.nato_shturmovik_chestplate": "NATO Shturmovik Chestplate",
+  "item.warborn.nato_mg_chestplate": "NATO Machine Gunner Chestplate",
+  "item.warborn.nato_mg_backpack": "NATO Machine Gunner Backpack",
   "item.warborn.nato_sqad_leader_helmet_woodland": "NATO Squad Leader Helmet (Woodland)",
   "item.warborn.nato_sqad_leader_chestplate_woodland": "NATO Squad Leader Chestplate (Woodland)",
   "item.warborn.nato_sqad_leader_backpack_woodland": "NATO Squad Leader Backpack (Woodland)",
   "item.warborn.nato_shoulderpads_woodland": "NATO Shoulderpads (Woodland)",
+  "item.warborn.nato_ukr_helmet_woodland": "NATO Ukrainian Helmet (Woodland)",
   "item.warborn.nato_ukr_chestplate_woodland": "NATO Ukrainian Chestplate (Woodland)",
+  "item.warborn.nato_shturmovik2_chestplate_woodland": "NATO Shturmovik V2 Chestplate (Woodland)",
+  "item.warborn.nato_helmet_woodland": "NATO Helmet (Woodland)",
+  "item.warborn.nato_shturmovik_chestplate_woodland": "NATO Shturmovik Chestplate (Woodland)",
+  "item.warborn.nato_mg_chestplate_woodland": "NATO Machine Gunner Chestplate (Woodland)",
   "menu.warborn.backpack": "Backpack",
   "key.warborn.open_backpack": "Open Backpack",
   "key.warborn.toggle_night_vision": "Toggle Night Vision"
