- Added Killa set - Added Tagilla set

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -35,6 +35,11 @@
   "item.warborn.beta7_helmet": "Beta 7 Helmet",
   "item.warborn.beta7_chestplate": "Beta 7 Chestplate",
   "item.warborn.beta7_shoulderpads": "Beta 7 Shoulderpads",
+  "item.warborn.killa_helmet": "Killa Helmet",
+  "item.warborn.killa_chestplate": "Killa Chestplate",
+  "item.warborn.tagilla_helmet": "Tagilla Helmet",
+  "item.warborn.tagilla_chestplate": "Tagilla Chestplate",
+  "item.warborn.tagilla_leggings": "Tagilla Leggings",
   "menu.warborn.backpack": "Backpack",
   "key.warborn.open_backpack": "Open Backpack",
   "key.warborn.toggle_night_vision": "Toggle Night Vision"
