- Finished Beta7 Variants

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -35,6 +35,14 @@
   "item.warborn.beta7_helmet": "Beta 7 Helmet",
   "item.warborn.beta7_chestplate": "Beta 7 Chestplate",
   "item.warborn.beta7_shoulderpads": "Beta 7 Shoulderpads",
+  "item.warborn.beta7_nvg_helmet_slate": "Beta 7 NVG Helmet (Slate)",
+  "item.warborn.beta7_helmet_slate": "Beta 7 Helmet (Slate)",
+  "item.warborn.beta7_chestplate_slate": "Beta 7 Chestplate (Slate)",
+  "item.warborn.beta7_shoulderpads_slate": "Beta 7 Shoulderpads (Slate)",
+  "item.warborn.beta7_nvg_helmet_ash": "Beta 7 NVG Helmet (Ash)",
+  "item.warborn.beta7_helmet_ash": "Beta 7 Helmet (Ash)",
+  "item.warborn.beta7_chestplate_ash": "Beta 7 Chestplate (Ash)",
+  "item.warborn.beta7_shoulderpads_ash": "Beta 7 Shoulderpads (Ash)",
   "item.warborn.killa_helmet": "Killa Helmet",
   "item.warborn.killa_chestplate": "Killa Chestplate",
   "item.warborn.tagilla_helmet": "Tagilla Helmet",
