- Fixed armor being able to be added into chestplate bundles - Fixed/removed right-clicking items into chestplate bundles - Added a new item/weapon (hammer)

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -48,6 +48,7 @@
   "item.warborn.tagilla_helmet": "Tagilla Helmet",
   "item.warborn.tagilla_chestplate": "Tagilla Chestplate",
   "item.warborn.tagilla_leggings": "Tagilla Leggings",
+  "item.warborn.tagilla_molot": "Tagilla Hammer",
   "menu.warborn.backpack": "Backpack",
   "key.warborn.open_backpack": "Open Backpack",
   "key.warborn.toggle_night_vision": "Toggle Night Vision"
