- Added icons to the rest of the missing ones (insurgency, beta7 legging variants) - Fixed an uncapitalized L in leggings in the lang file for insurgency leggings. - Started an armor config class

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -61,7 +61,7 @@
   "item.warborn.insurgency_commander_helmet": "Insurgency Commander Helmet",
   "item.warborn.insurgency_commander_chestplate": "Insurgency Commander Chestplate",
   "item.warborn.insurgency_commander_shoulderpads": "Insurgency Commander Shoulderpads",
-  "item.warborn.insurgency_commander_leggings": "Insurgency Commander leggings",
+  "item.warborn.insurgency_commander_leggings": "Insurgency Commander Leggings",
 
   "item.warborn.tagilla_molot": "Tagilla Hammer",
 
