- NVG toggle third person animations - Removed yucky mixins that hide arms and instead fixed the armor models to rotate with the arms correctly - Refractored events to event - Added 3 or 4 new sets, I forget

--- a/src/main/resources/assets/warborn/lang/en_us.json
+++ b/src/main/resources/assets/warborn/lang/en_us.json
@@ -62,6 +62,14 @@
   "item.warborn.insurgency_commander_chestplate": "Insurgency Commander Chestplate",
   "item.warborn.insurgency_commander_shoulderpads": "Insurgency Commander Shoulderpads",
   "item.warborn.insurgency_commander_leggings": "Insurgency Commander Leggings",
+  "item.warborn.insurgency_shturmovik_helmet": "Insurgency Shturmovik Helmet",
+  "item.warborn.insurgency_shturmovik_chestplate": "Insurgency Shturmovik Chestplate",
+  "item.warborn.insurgency_shturmovik_backpack": "Insurgency Shturmovik Backpack",
+
+  "item.warborn.soviet_soldier_helmet": "Soviet Soldier Helmet",
+    "item.warborn.soviet_soldier_chestplate": "Soviet Soldier Chestplate",
+    "item.warborn.soviet_soldier_leggings": "Soviet Soldier Leggings",
+  "item.warborn.soviet_soldier_backpack": "Soviet Soldier Backpack",
 
   "item.warborn.tagilla_molot": "Tagilla Hammer",
 
